fixed performance in collapsing

--- a/tagcwebapp/src/main/resources/static/css/style.css
+++ b/tagcwebapp/src/main/resources/static/css/style.css
@@ -124,7 +124,7 @@ div#minimapContainer {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 10%;
+    height: 30%;
     border: 1px solid #747171;
     border-radius: 3px;
     background: #f7f7f7;
